Trying to fix white space 8: I give up

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -6,6 +6,13 @@
     box-sizing: border-box;
 }
 
+body{
+    background: linear-gradient(to bottom right, #111827, #1f2937, #000000);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 #root{
     background: linear-gradient(to bottom right, #111827, #1f2937, #000000);
     background-repeat: no-repeat;
